Refactor API endpoints and security configuration
- Updated UserController to remove the '/api' prefix from endpoint mappings for a cleaner URL structure.
- Adjusted SecurityConfig to maintain the same functionality while improving code readability and organization.
- Ensured that unit tests in UserControllerTest reflect the updated endpoint paths, maintaining test coverage for user registration and login functionalities.